[package]
name = "human-units"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
description.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
features = ["serde", "std", "derive", "si-units"]

[features]
default = ["std", "unicode"]
serde = ["dep:serde", "human-units-derive/serde"]
no_std = []
std = []
unicode = []
derive = ["dep:human-units-derive"]
si-units = ["derive"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"], optional = true }
human-units-derive = { path = "derive", version = "=0.3.0", optional = true }

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"
colored = "2.1.0"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
human_bytes = { version = "0.4.3", features = ["fast"] }
human-repr = { version = "1.1.0", features = ["1024", "space"] }
clap = { version = "4.5.17", features = ["derive"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "warn"

[workspace]
members = [".", "derive"]
default-members = [".", "derive"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/igankevich/human-units"
repository = "https://github.com/igankevich/human-units"
documentation = "https://docs.rs/human-units"
description = "Units serialization and formatting library designed for configuration files and command line arguments"
keywords = ["format", "duration", "bytes", "configuration", "serialization"]
categories = ["encoding", "value-formatting", "config", "data-structures"]
