[package]
name = "human-units"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
description.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["serde", "std", "derive", "si-units", "iec-units"]

[features]
default = ["std", "unicode"]
serde = ["dep:serde", "human-units-derive/serde"]
no_std = []
std = []
unicode = []
derive = ["dep:human-units-derive"]
si-units = ["derive"]
iec-units = ["derive"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
human-units-derive = { path = "derive", version = "=0.5.2", optional = true }
paste = "1.0.15"

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.2"
colored = "3.0.0"
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }
criterion = "0.6.0"
human-repr = { version = "1.1.0", features = ["1024", "space"] }
human_bytes = { version = "0.4.3", features = ["fast"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "0.8.23"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "warn"

[workspace]
members = [".", "derive"]
default-members = [".", "derive"]

[workspace.package]
version = "0.5.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/igankevich/human-units"
repository = "https://github.com/igankevich/human-units"
documentation = "https://docs.rs/human-units"
description = "Units serialization and formatting library designed for configuration files and command line arguments"
keywords = ["format", "duration", "bytes", "configuration", "serialization"]
categories = ["encoding", "value-formatting", "config", "data-structures"]
rust-version = "1.78"

[[bench]]
name = "size"
harness = false

[[bench]]
name = "unitify"
harness = false

[[bench]]
name = "format"
harness = false

[[bench]]
name = "write"
harness = false

[[bench]]
name = "iec"
harness = false
