[package]
name = "human-units-tests"
description = "Test generator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
arbtest = "0.3.2"
human-units = { path = "..", features = ["std", "serde", "derive"] }
pastey = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.23"

[build-dependencies]
human-units = { path = "..", features = ["std", "serde", "derive"] }
